# zerobot-rs

./: .env.example  .gitignore  Cargo.toml
.github/workflows/: ci.yml
src/: commands.rs  config.rs  cytube.rs  main.rs  tasks.rs
src/commands/: command_info.rs  help.rs
